Normalize ride tables to use Location entities
Refactored SharedRide and SharedRideRequest entities to use Location entity references instead of raw lat/lng and location IDs. Updated DTOs, mappers, and service logic to support richer location data, including address fields. Added address resolution via Goong API, and ensured new locations are created and persisted as needed. Introduced configuration for ride constraints and improved error message formatting with context support. Updated related tests and removed OSRM routing provider from configuration.